# wispr-tauri-deepgram

wispr-tauri-deepgram/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
wispr-tauri-deepgram/src-tauri/: Cargo.toml  tauri.conf.json
wispr-tauri-deepgram/src-tauri/capabilities/: default.json
wispr-tauri-deepgram/src-tauri/icons/: icon.icns
wispr-tauri-deepgram/src-tauri/src/: deepgram.rs  main.rs
wispr-tauri-deepgram/src/audio/: workletRecorder.ts
wispr-tauri-deepgram/src/services/: tauriBridge.ts
wispr-tauri-deepgram/src/ui/: App.tsx
wispr-tauri-deepgram/src/worklets/: pcm16-processor.js
